Update Linear Regression - Ecommerce Customers.ipynb

--- a/Linear Regression - Ecommerce Customers.ipynb
+++ b/Linear Regression - Ecommerce Customers.ipynb
@@ -508,7 +508,7 @@
    "id": "46222c91",
    "metadata": {},
    "source": [
-    "<b>*TRAINING AND TESTING DATA SET*<\b>"
+    "<b>*TRAINING AND TESTING DATA SET*</b>"
    ]
   },
   {
