Update Decision Tree & Random Forest.ipynb

--- a/Decision Tree & Random Forest.ipynb
+++ b/Decision Tree & Random Forest.ipynb
@@ -5,7 +5,7 @@
    "id": "ff0acf5d",
    "metadata": {},
    "source": [
-    "IMPORT AND SET UP"
+    "# IMPORT AND SET UP"
    ]
   },
   {
@@ -488,7 +488,7 @@
    "id": "fb6a6e85",
    "metadata": {},
    "source": [
-    "EXPLORATORY DATA ANALYSIS"
+    "# EXPLORATORY DATA ANALYSIS"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "id": "70941c33",
    "metadata": {},
    "source": [
-    "DATA CLEANING"
+    "# DATA CLEANING"
    ]
   },
   {
@@ -965,7 +965,7 @@
    "id": "9f2bb086",
    "metadata": {},
    "source": [
-    "TRAINING AND TESTING - DECISION TREE"
+    "# TRAINING AND TESTING - DECISION TREE"
    ]
   },
   {
@@ -1027,7 +1027,7 @@
    "id": "a7a9b0f2",
    "metadata": {},
    "source": [
-    "PREDICTIONS DECISION TREE"
+    "# PREDICTIONS DECISION TREE"
    ]
   },
   {
@@ -1045,7 +1045,7 @@
    "id": "ecbdb86a",
    "metadata": {},
    "source": [
-    "EVALUATIONS DECISION TREE"
+    "# EVALUATIONS DECISION TREE"
    ]
   },
   {
@@ -1104,7 +1104,7 @@
    "id": "73ff054e",
    "metadata": {},
    "source": [
-    "TRAINING AND TESTING RANDOM FOREST"
+    "# TRAINING AND TESTING RANDOM FOREST"
    ]
   },
   {
@@ -1153,7 +1153,7 @@
    "id": "64a12333",
    "metadata": {},
    "source": [
-    "PREDICTIONS OF RANDOM FOREST"
+    "# PREDICTIONS OF RANDOM FOREST"
    ]
   },
   {
@@ -1171,7 +1171,7 @@
    "id": "423b8359",
    "metadata": {},
    "source": [
-    "EVALUATIONS OF RANDOM FOREST"
+    "# EVALUATIONS OF RANDOM FOREST"
    ]
   },
   {
