Update KNN - Wine Classification.ipynb

--- a/KNN - Wine Classification.ipynb
+++ b/KNN - Wine Classification.ipynb
@@ -5,7 +5,7 @@
    "id": "0dfe3be2",
    "metadata": {},
    "source": [
-    "IMPORT AND SET UP"
+    "# IMPORT AND SET UP"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "id": "03299186",
    "metadata": {},
    "source": [
-    "CHECKING MISSING VALUES"
+    "# CHECKING MISSING VALUES"
    ]
   },
   {
@@ -414,7 +414,7 @@
    "id": "3ff6e978",
    "metadata": {},
    "source": [
-    "SCALING THE DATA\n",
+    "# SCALING THE DATA\n",
     "\n",
     "- Let's standardize the data"
    ]
@@ -590,7 +590,7 @@
    "id": "0f4fa418",
    "metadata": {},
    "source": [
-    "TRAINING AND TESTING"
+    "# TRAINING AND TESTING"
    ]
   },
   {
@@ -637,7 +637,7 @@
    "id": "16359ef0",
    "metadata": {},
    "source": [
-    "PREDICTIONS"
+    "# PREDICTIONS"
    ]
   },
   {
@@ -677,7 +677,7 @@
    "id": "e97131a3",
    "metadata": {},
    "source": [
-    "EVALUATION"
+    "# EVALUATION"
    ]
   },
   {
